# my-course-doesnt-teach-me-maths-nooooo

./: README.md  pyproject.toml
mathdrill/: __main__.py  cli.py  engine.py  questions.py  stats.py
